<resources>
    <string name="app_name">Teams and Players</string>
    <string name="tv_name">Adriano Maciel Sanchez</string>
    <string name="tv_ra">1110482313018</string>
    <string name="mi_team">Team</string>
    <string name="mi_player">Player</string>
    <string name="et_code">Code</string>
    <string name="et_name">Name</string>
    <string name="et_city">City</string>
    <string name="et_id">ID</string>
    <string name="et_birthdate">Birthdate</string>
    <string name="et_height">Height</string>
    <string name="et_weight">Weight</string>
    <string name="bt_insert">Insert</string>
    <string name="bt_update">Update</string>
    <string name="bt_delete">Delete</string>
    <string name="bt_find">Find</string>
    <string name="bt_list">List</string>
    <string name="error_title">Error!</string>
    <string name="not_found_msg">Not found!</string>
</resources>