<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PlayerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerFragment">

    <EditText
        android:id="@+id/etIdPlayer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/et_id"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNamePlayer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdPlayer" />

    <EditText
        android:id="@+id/etBirthdatePlayer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_birthdate"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNamePlayer" />

    <EditText
        android:id="@+id/etHeightPlayer"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_height"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="@+id/etBirthdatePlayer"
        app:layout_constraintTop_toBottomOf="@+id/etBirthdatePlayer" />

    <EditText
        android:id="@+id/etWeightPlayer"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_weight"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/etBirthdatePlayer"
        app:layout_constraintTop_toBottomOf="@+id/etBirthdatePlayer" />

    <Spinner
        android:id="@+id/spTeamPlayer"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHeightPlayer" />

    <TextView
        android:id="@+id/tvListPlayer"
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btUpdatePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTeamPlayer" />

    <Button
        android:id="@+id/btFindPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/bt_find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btInsertPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/bt_insert"
        app:layout_constraintBottom_toTopOf="@+id/btFindPlayer"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btUpdatePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/bt_update"
        app:layout_constraintBottom_toTopOf="@+id/btFindPlayer"
        app:layout_constraintEnd_toStartOf="@+id/btDeletePlayer"
        app:layout_constraintStart_toEndOf="@+id/btInsertPlayer" />

    <Button
        android:id="@+id/btDeletePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/bt_delete"
        app:layout_constraintBottom_toTopOf="@+id/btListPlayer"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btListPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/bt_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>